--- a/package.json
+++ b/package.json
@@ -72,15 +72,17 @@
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
+    "dotenv-webpack": "^3.0.0",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
+    "formik": "^2.1.5",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
     "minimist": "1.2.0",
     "perfect-scrollbar": "1.4.0",
     "prop-types": "15.7.2",
@@ -90,11 +92,14 @@
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-swipeable-views": "^0.13.9",
     "redux": "4.0.1",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "styled-components": "4.2.0",
+    "with-immutable-props-to-js": "^1.1.0"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
@@ -121,6 +126,7 @@
     "compression-webpack-plugin": "2.0.0",
     "coveralls": "3.0.3",
     "css-loader": "2.1.1",
+    "env-cmd": "^10.1.0",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-airbnb-base": "13.1.0",
@@ -130,8 +136,8 @@
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-redux-saga": "1.0.0",
     "eslint-plugin-react-hooks": "1.6.0",
+    "eslint-plugin-redux-saga": "1.0.0",
     "file-loader": "3.0.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
